bitwarden_server/07-bitwarden-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bitwarden
  labels:
    app: web
    type: service
spec:
  selector:
    app: web
    type: pod
  ports:
  - name: web
    port: 5000
