bitwarden_server/11-bitwarden-attachments-service.yml
apiVersion: v1
kind: Service
metadata:
  name: attachments
  namespace: bitwarden
  labels:
    app: attachments
    type: service
spec:
  selector:
    app: attachments
    type: pod
  ports:
  - name: attachments
    port: 5000
