bitwarden_server/14-bitwarden-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: bitwarden
  labels:
    app: api
    type: service
spec:
  selector:
    app: api
    type: pod
  ports:
  - name: api
    port: 5000
