bitwarden_server/18-bitwarden-identity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: bitwarden
  labels:
    app: identity
    type: service
spec:
  selector:
    app: identity
    type: pod
  ports:
  - name: identity
    port: 5000
