bitwarden_server/24-bitwarden-icons-service.yml
apiVersion: v1
kind: Service
metadata:
  name: icons
  namespace: bitwarden
  labels:
    app: icons
    type: service
spec:
  selector:
    app: icons
    type: pod
  ports:
  - name: icons
    port: 5000
