bitwarden_server/27-bitwarden-notifications-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: bitwarden
  labels:
    app: notifications
    type: service
spec:
  selector:
    app: notifications
    type: pod
  ports:
  - name: notifications
    port: 5000
