bitwarden_server/31-bitwarden-nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: bitwarden
  labels:
    app: nginx
    type: service
spec:
  selector:
    app: nginx
    type: pod
  ports:
  - name: nginx
    port: 8080
