bitwarden_server/13-bitwarden-attachments-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attachments 
  namespace: bitwarden
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/config-backend: |
      http-response set-header Referrer-Policy same-origin
      http-response set-header X-Content-Type-Options nosniff
      http-response set-header X-XSS-Protection "1; mode=block"
      http-response set-header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://haveibeenpwned.com https://www.gravatar.com; child-src 'self' https://*.duosecurity.com; frame-src 'self' https://*.duosecurity.com; connect-src 'self' wss://bitwarden.domain.com https://api.pwnedpasswords.com https://twofactorauth.org; object-src 'self' blob:;"
      http-response set-header X-Frame-Options SAMEORIGIN
      http-response set-header X-Robots-Tag "noindex, nofollow"
      http-response set-header Content-Type application/fido.trusted-apps+json if { var(txn.path) -m str /app-id.json }
spec:
  tls:
  - hosts:
      - passwords.elielaloum.com
    secretName: "bitwarden-tls"
  rules:
  - host: passwords.elielaloum.com
    http:
      paths:
      - path: /attachments
        pathType: Prefix
        backend:
          service:
            name: attachments
            port:
              number: 5000
