bitwarden_server/23-bitwarden-admin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: bitwarden
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/config-backend: |
      http-response set-header Referrer-Policy same-origin
      http-response set-header X-Content-Type-Options nosniff
      http-response set-header X-XSS-Protection "1; mode=block"
      http-response set-header X-Frame-Options SAMEORIGIN
spec:
  tls:
  - hosts:
      - passwords.elielaloum.com
    secretName: "bitwarden-tls"
  rules:
  - host: passwords.elielaloum.com
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 5000
